--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
   <div class="wrapper">
     <div class="card">
-      <img src="/images/image-qr-code.png" alt="qr code" class="image">
+      <img src="images/image-qr-code.png" alt="qr code" class="image">
       <h3 class="title">Improve your front-end skills by building projects</h3>
       <p class="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
