--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Onwuka Victor Leo</a>.
+    Coded by <a href="https://github.com/vectorleo">Onwuka Victor Leo</a>.
   </div>
 </body>
 </html>
