--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -17,7 +18,7 @@
       --white:hsl(0, 0%, 100%);
 
       --fs:15px;
-      --ff:url(https://fonts.google.com/specimen/Outfit);
+      --ff:url:Outfit;
       --weight-400:400;
       --weight-700:700;
     }
