--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --white:hsl(0, 0%, 100%);
 
       --fs:15px;
-      --ff:url:Outfit;
+      --ff:url:'Outfit';
       --weight-400:400;
       --weight-700:700;
     }
