--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       padding: 15px;
       border-radius: 16px;
       text-align: center;
+      box-shadow: 10px 5px 30px rgba(128, 128, 128, 0.301);
     }
     .card > p{
       font-weight: var(--weight-400);
